--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>チーム紹介</title>
 </head>
 <body>
-    
+    <h1>チームメンバー紹介</h1>
+    <ul>
+        <li>大野晃輝：limbus楽しい</li>
+    </ul>
 </body>
 </html>
